refactoring variable name